# Avatar-Animator2d

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
res/: app.rc
src/: audio_capture.cpp  audio_capture.h  config.cpp  config.h  image_loader.cpp  image_loader.h  main.cpp  render.h  ui.h
